<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_Showdetails_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_action_male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVerifiedName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorCardBG"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="@id/imgUser"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toTopOf="@id/imgUser"
            tools:text="User Name" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/imgUser"
            app:layout_constraintTop_toBottomOf="@id/imgUser">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/round_solid_gray"
                android:orientation="horizontal"
                android:padding="@dimen/_13sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="Subscriber ID"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/colorMidGrays" />

                    <TextView
                        android:id="@+id/txtLoginID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_solid_gray"
                android:orientation="horizontal"
                android:padding="@dimen/_13sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="Email Address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/colorMidGrays" />

                    <TextView
                        android:id="@+id/txtLoginEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_solid_gray"
                android:orientation="horizontal"
                android:padding="@dimen/_13sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="Mobile Number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/colorMidGrays" />

                    <TextView
                        android:id="@+id/txtLoginMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyl_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_solid_grey_logout_btn"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="10dp"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:nextFocusRight="@+id/lyl_logout"
                android:nextFocusUp="@+id/lyl_logout"
                android:nextFocusDown="@id/lyl_logout"
                android:orientation="horizontal"
                android:padding="@dimen/_13sdp"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_logout" />

                <TextView
                    android:id="@+id/txtLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1.0"
                    android:text="@string/log_out"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_more_right" />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_not_loggedIn_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_action_logo"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                tools:layout_editor_absoluteX="73dp"
                tools:layout_editor_absoluteY="212dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/guest"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/user_alert_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnLoginRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/button_style"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

